--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vimfiles/bundle/colors"]
 	path = vimfiles/bundle/colors
 	url = git://github.com/flazz/vim-colorschemes.git
+[submodule "vimfiles/bundle/vim-addon-local-vimrc"]
+	path = vimfiles/bundle/vim-addon-local-vimrc
+	url = git://github.com/MarcWeber/vim-addon-local-vimrc.git
