--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vimfiles/bundle/mustang"]
-	path = vimfiles/bundle/mustang
-	url = git://github.com/croaker/mustang-vim.git
+[submodule "vimfiles/bundle/Vundle.vim"]
+	path = vimfiles/bundle/Vundle.vim
+	url = https://github.com/gmarik/Vundle.vim.git
